# simple-transformer

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: experiment.ipynb  experiment_jax.ipynb  initial.ipynb  optimization_notes.md
src/simple_transformer/: __init__.py  benchmark.py  checkpoint.py  config.py  data.py  metrics.py  model.py  quantization.py  train.py
src/simple_transformer/jax/: model.py  train.py
tests/: test_benchmark.py  test_checkpoint.py  test_data.py  test_jax_model.py  test_jax_train.py  test_model.py  test_quantization.py  test_train.py
