[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-transformer"
version = "0.1.0"
description = "A small transformer from scratch for learning arithmetic."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "tensorboard>=2.15",
    "psutil>=5.9",
    "numpy>=1.24",
    "tqdm>=4.66",
    "matplotlib>=3.7",
    "ipykernel>=6.25",
    "jax>=0.4.30",
    "flax>=0.10",
    "optax>=0.2.3",
    "torchao>=0.17",
]

[tool.setuptools.packages.find]
where = ["src"]
